--- a/blocks/recommend/recommend.css
+++ b/blocks/recommend/recommend.css
@@ -1,7 +1,7 @@
 .recommend {
   max-width: var(--width-max);
   margin: calc(var(--space-primary) + 200px) auto 20px;
-  background-image: url("../../images/recommend-bg.webp");
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/recommend-bg.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -30,7 +30,7 @@
 
 .recommend__button::after,
 .recommend__button::before {
-  content: "";
+  content: '';
   width: 36px;
   height: 36px;
   position: absolute;
@@ -38,13 +38,13 @@
 }
 
 .recommend__button::before {
-  background-image: url("../../images/socials/telegram-icon.svg");
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/socials/telegram-icon.svg');
   top: -20px;
   right: -10px;
 }
 
 .recommend__button::after {
-  background-image: url("../../images/socials/whatsapp-icon.svg");
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/socials/whatsapp-icon.svg');
   top: -5px;
   right: -25px;
 }
