--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -80,7 +80,7 @@
 .faq__button {
   width: 40px;
   height: 40px;
-  background-image: url("../../images/faq-show.svg");
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/faq-show.svg');
   background-position: center;
   border: none;
   flex-shrink: 0;
