Update and rename index-9.css to index-9.v1.css

--- a/style/index-9.v1.css
+++ b/style/index-9.v1.css
@@ -812,7 +812,7 @@ padding: 0px;
 	text-align: center;
 	border-radius: 50px;
 }
-.faq__slider
+/*.faq__slider
 {
 	margin-top: 40px !important;
 }
@@ -920,6 +920,7 @@ footer
 	padding-bottom: 93px;
 	background-color: #F5F5F5;
 }
+*/
 .right__imgs img
 {
 	width: 27px;
