--- a/pages/telegram.css
+++ b/pages/telegram.css
@@ -14,7 +14,7 @@
 
 @import url('../blocks/choice/choice.css');
 
-@import url('../blocks/culc/culc.css');
+@import url('../blocks/culc/culc.v1.css');
 
 @import url('../blocks/faq/faq.css');
 
