--- a/pages/global.v2.css
+++ b/pages/global.v2.css
@@ -26,6 +26,6 @@
 
 @import url('../blocks/content/content.css');
 
-@import url('../blocks/header/header.css');
+@import url('../blocks/header/header.v1.css');
 
 @import url('../blocks/footer/footer.css');
