Update and rename header.v1.css to header.v2.css

--- a/blocks/header/header.v2.css
+++ b/blocks/header/header.v2.css
@@ -257,6 +257,7 @@
     box-shadow: none;
   }
   .header__links-sublist {
+    gap: 10px;
     box-shadow: none;
     transform: none;
     padding: 10px 15px;
