--- a/blocks/footer/footer.v1.css
+++ b/blocks/footer/footer.v1.css
@@ -253,11 +253,13 @@
   transform: scale(-1, -1);
 }
 
-.links-sublist_opened {
+@media screen and (max-width: 980px) {
+  .links-sublist_opened {
   display: flex;
   position: relative;
   visibility: visible;
   opacity: 1;
   transform: translate(0, 0);
   margin-top: 3%;
+}
 }
