Update and rename index-9.v2.css to index-9.v3.css

--- a/style/index-9.v3.css
+++ b/style/index-9.v3.css
@@ -850,7 +850,7 @@ padding: 0px;
 	line-height: 17px;
 	letter-spacing: 0.035em;
 	text-align: left;
-}
+}*/
 .footer__left
 {
 	display: flex;
@@ -920,7 +920,6 @@ footer
 	padding-bottom: 93px;
 	background-color: #F5F5F5;
 }
-*/
 .right__imgs img
 {
 	width: 27px;
