Update and rename index.v1.css to index.v2.css

--- a/pages/index.v2.css
+++ b/pages/index.v2.css
@@ -36,6 +36,6 @@
 
 @import url('../blocks/rating/rating.css');
 
-@import url('../blocks/intro/intro.css');
+@import url('../blocks/intro/intro.v1.css');
 
 @import url('../blocks/registration/registration.css');
