--- a/blocks/registration/registration.v2.css
+++ b/blocks/registration/registration.v2.css
@@ -16,6 +16,7 @@
   gap: 20px 40px;
 }
 .registration__input {
+  margin: 0 !important;
 }
 .registration__input_grid_login {
   grid-area: login;
@@ -90,7 +91,7 @@
       'capcha capcha'
       'button button'
       'registration registration';
-    gap: 12px;
+    gap: 20px;
     max-width: 400px;
     margin: 0 auto;
   }
@@ -106,6 +107,6 @@
   .registration__button {
     font-size: 16px;
     padding: 12px 0;
-    margin: 20px 0 8px;
+    margin: 20px 0 0;
   }
 }
