Update and rename registration.v3.css to registration.v4.css

--- a/blocks/registration/registration.v4.css
+++ b/blocks/registration/registration.v4.css
@@ -25,6 +25,9 @@
 .registration__input_grid_password {
   grid-area: password;
 }
+.registration__error {
+  grid-area: error;
+}
 .registration__input_grid_remember {
   grid-area: remember;
 }
