--- a/pages/global.v7.css
+++ b/pages/global.v7.css
@@ -22,7 +22,7 @@
 @import url('../blocks/menu-burger/__item/menu-burger__item.css');
 @import url('../blocks/menu-burger/__item/_active/menu-burger__item_active.css');
 
-@import url('../blocks/root/root.css');
+@import url('../blocks/root/root.v1.css');
 
 @import url('../blocks/content/content.css');
 
