--- a/pages/global.v8.css
+++ b/pages/global.v8.css
@@ -22,9 +22,9 @@
 @import url('../blocks/menu-burger/__item/menu-burger__item.css');
 @import url('../blocks/menu-burger/__item/_active/menu-burger__item_active.css');
 
-@import url('../blocks/root/root.v1.css');
+@import url('../blocks/root/root.v2.css');
 
-@import url('../blocks/content/content.css');
+@import url('../blocks/content/content.v1.css');
 
 @import url('../blocks/header/header.v2.css');
 
