Update and rename btn.v1.css to btn.v2.css

--- a/blocks/btn/btn.v2.css
+++ b/blocks/btn/btn.v2.css
@@ -11,3 +11,8 @@
   text-align: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+.btn:hover {
+  text-decoration: none;
+  color: #fff;
+}
