Update and rename index.v8.css to index.v9.css

--- a/pages/index.v9.css
+++ b/pages/index.v9.css
@@ -16,7 +16,7 @@
 
 @import url('../blocks/culc/culc.v1.css');
 
-@import url('../blocks/faq/faq.css');
+@import url('../blocks/faq/faq.v1.css');
 
 @import url('../blocks/know/know.css');
 
