Update and rename btn_color_blue.css to btn_color_blue.v1.css

--- a/blocks/btn/_color/btn_color_blue.v1.css
+++ b/blocks/btn/_color/btn_color_blue.v1.css
@@ -6,4 +6,10 @@
 
 .btn_color_blue:hover {
   background-color: #6A98FF
+  color: #fff;
+}
+
+.btn_color_blue:focus {
+  background-color: #6A98FF
+  color: #fff;
 }
