--- a/blocks/btn/_color/btn_color_light-blue.v1.css
+++ b/blocks/btn/_color/btn_color_light-blue.v1.css
@@ -4,7 +4,12 @@
   color: var(--color-primary);
 }
 
-.btn_color_light-blue:hover {
+.btn_color_blue:hover {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.btn_color_blue:focus {
   background-color: var(--color-primary);
   color: #fff;
 }
