--- a/blocks/btn/_color/btn_color_light-orange.v1.css
+++ b/blocks/btn/_color/btn_color_light-orange.v1.css
@@ -4,7 +4,8 @@
   color: var(--color-secondary);
 }
 
-.btn_color_light-orange:hover {
+.btn_color_light-orange:hover,
+.btn_color_light-orange:focus {
   color: var(--color-secondary-hover);
   border: 1px solid var(--color-secondary-hover);
 }
