--- a/blocks/btn/_color/btn_color_orange.v1.css
+++ b/blocks/btn/_color/btn_color_orange.v1.css
@@ -4,6 +4,8 @@
   color: #fff;
 }
 
-.btn_color_orange:hover {
+.btn_color_orange:hover,
+.btn_color_orange:focus {
+  color: #fff;
   background-color: var(--color-secondary-hover)
 }
