--- a/blocks/btn/_color/btn_color_white.v1.css
+++ b/blocks/btn/_color/btn_color_white.v1.css
@@ -4,6 +4,7 @@
   color: var(--color-secondary);
 }
 
-.btn_color_white:hover {
+.btn_color_white:hover,
+.btn_color_white:focus {
   color: var(--color-secondary-hover);
 }
