--- a/blocks/btn/_color/btn_color_blue.v2.css
+++ b/blocks/btn/_color/btn_color_blue.v2.css
@@ -5,11 +5,11 @@
 }
 
 .btn_color_blue:hover {
-  background-color: #6A98FF
+  background-color: #6A98FF;
   color: #fff;
 }
 
 .btn_color_blue:focus {
-  background-color: #6A98FF
+  background-color: #6A98FF;
   color: #fff;
 }
