Update and rename btn_color_light-blue.v1.css to btn_color_light-blue.v2.css

--- a/blocks/btn/_color/btn_color_light-blue.v2.css
+++ b/blocks/btn/_color/btn_color_light-blue.v2.css
@@ -4,12 +4,8 @@
   color: var(--color-primary);
 }
 
-.btn_color_blue:hover {
-  background-color: var(--color-primary);
-  color: #fff;
-}
-
-.btn_color_blue:focus {
+.btn_color_light-blue:hover,
+.btn_color_light-blue:focus {
   background-color: var(--color-primary);
   color: #fff;
 }
