Update and rename index.v9.css to index.v10.css

--- a/pages/index.v10.css
+++ b/pages/index.v10.css
@@ -34,7 +34,7 @@
 
 @import url('../blocks/guarantee/guarantee.css');
 
-@import url('../blocks/rating/rating.css');
+@import url('../blocks/rating/rating.v1.css');
 
 @import url('../blocks/intro/intro.v2.css');
 
