--- a/pages/freeservice.css
+++ b/pages/freeservice.css
@@ -16,7 +16,7 @@
 
 @import url('../blocks/culc/culc.v1.css');
 
-@import url('../blocks/faq/faq.css');
+@import url('../blocks/faq/faq.v1.css');
 
 @import url('../blocks/know/know.css');
 
@@ -36,16 +36,12 @@
 
 @import url('../blocks/rating/rating.v1.css');
 
-@import url('../blocks/intro/intro.css');
-
-@import url('../blocks/registration/registration.css');
-
 @import url('../blocks/result/result.css');
+
+@import url('../blocks/intro/intro.v2.css');
 
 @import url('../blocks/social/social.css');
 
 @import url('../blocks/social-intro/social-intro.css');
 
-@import url('../blocks/service-list/service-list.css');
-
-@import url('../blocks/popup/popup.css');
+@import url('../blocks/freeservices/freeservices.css');
