feat: ad styles

--- a/blocks/freeservices/freeservices.css
+++ b/blocks/freeservices/freeservices.css
@@ -1,16 +1,23 @@
 .freeservices {
   max-width: var(--width-max);
-  margin: var(--space-primary) auto;
+  padding: var(--space-primary) 0;
+  margin: 0 auto;
 }
 .freeservices__title {
   text-align: center;
-  margin: 0 0 20px;
+  margin: 0 0 40px;
+  color: var(--color-dark);
 }
 .freeservices__subtitle {
   font-size: 20px;
   line-height: 1.2;
   margin: 0 0 10px;
   padding: 0;
+}
+.freeservices__description {
+  margin: 0 0 10px;
+  color: var(--color-dark);
+  text-align: center;
 }
 .freeservices__form {
   display: flex;
@@ -25,6 +32,8 @@
   gap: 20px;
 }
 .freeservices__waiting {
+  margin: 0 0 10px;
+  color: var(--color-dark);
 }
 .freeservices__waiting_hidden {
   display: none;
@@ -32,6 +41,7 @@
 .freeservices__time {
 }
 .freeservices__response {
+  margin: 0 0 10px;
 }
 .freeservices__responce_hidden {
   display: none;
@@ -59,6 +69,8 @@
   border: 1px solid var(--color-primary);
   border-radius: 100px;
   align-self: stretch;
+  font-size: 14px;
+  line-height: 1.2;
 }
 .freeservices__input_type_select {
   width: 100%;
@@ -67,4 +79,27 @@
   appearance: none;
 }
 .freeservices__submit {
+}
+
+@media screen and (max-width: 700px) {
+  .freeservices {
+    padding: var(--space-primary) 30px 0;
+  }
+  .freeservices__title {
+    text-align: left;
+    margin: 0 0 30px;
+  }
+
+  .freeservices__form {
+    border-radius: 15px;
+    padding: 15px;
+    gap: 15px;
+  }
+  .freeservices__waiting {
+    font-size: 12px;
+  }
+  .freeservices__input {
+    font-size: 12px;
+    padding: 14px 30px 14px 20px;
+  }
 }
