--- a/pages/freeservice.css
+++ b/pages/freeservice.css
@@ -44,4 +44,4 @@
 
 @import url('../blocks/social-intro/social-intro.css');
 
-@import url('../blocks/freeservices/freeservices.css');
+@import url('../blocks/freeservices/freeservices.v1.css');
