Update and rename social-intro.v1.css to social-intro.v2.css

--- a/blocks/social-intro/social-intro.v2.css
+++ b/blocks/social-intro/social-intro.v2.css
@@ -53,6 +53,7 @@
   font-size: 46px;
   position: relative;
   z-index: 2;
+  font-weight: 700;
 }
 .social-intro__text {
   color: var(--color-dark);
