Update and rename social-intro.v2.css to social-intro.v3.css

--- a/blocks/social-intro/social-intro.v3.css
+++ b/blocks/social-intro/social-intro.v3.css
@@ -59,6 +59,7 @@
   color: var(--color-dark);
   margin: 0 0 40px;
   padding: 0 20px 0 0;
+  max-width: 550px;
 }
 .social-intro__social {
   background: #ffffff;
