--- a/pages/global.v17.css
+++ b/pages/global.v17.css
@@ -13,7 +13,7 @@
 @import url('../blocks/btn/_color//btn_color_white.v1.css');
 @import url('../blocks/btn/_size/btn_size_large.css');
 @import url('../blocks/btn/_size/btn_size_small.css');
-@import url('../blocks/btn/_disabled/btn_disabled.css');
+@import url('../blocks/btn/_disabled/btn_disabled.v1.css');
 @import url('../blocks/section-title/section-title.css');
 @import url('../blocks/text/text.css');
 @import url('../blocks/link/link.v3.css');
