--- a/pages/freeservice.v10.css
+++ b/pages/freeservice.v10.css
@@ -40,6 +40,8 @@
 
 @import url('../blocks/intro/intro.v2.css');
 
+@import url('../blocks/social-intro/social-intro.v6.css');
+
 @import url('../blocks/social/social.css');
 
 @import url('../blocks/freeservices/freeservices.v1.css');
