feat: add freeservice page

--- a/blocks/social-intro/social-intro.v8.css
+++ b/blocks/social-intro/social-intro.v8.css
@@ -6,7 +6,7 @@
   overflow: hidden;
 }
 .social-intro_reg-styled {
-  background: linear-gradient(0deg, #f8f9fd 5%, #f2f2fc 50.24%);
+  background: linear-gradient(180deg, #fff 5%, #f2f2fc 50.24%);
 }
 
 .social-intro_unreg-styled {
