--- a/blocks/header/header.v2.css
+++ b/blocks/header/header.v2.css
@@ -78,11 +78,35 @@
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   overflow: hidden;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   align-self: flex-start;
   margin: 4px 0 0 0;
   cursor: pointer;
 }
+.header__link_type_menu {
+  background-color: #fff;
+  position: relative;
+  z-index: 3;
+}
+.header__link_type_menu::after {
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 5px;
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/arrow.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: 3px;
+  transition: all 0.4s linear;
+}
+
+@media screen and (min-width: 960px) {
+  .header__link_type_menu:hover::after {
+    transform: scaleY(-1);
+  }
+}
+
 .header__links-sublist {
   visibility: hidden;
   opacity: 0;
@@ -201,6 +225,11 @@
     display: flex;
     overflow-y: auto;
   }
+
+  .header__link_type_menu::after {
+    width: 12px;
+    height: 10px;
+  }
   .header__links-list {
     flex-direction: column;
     flex-basis: 60%;
@@ -223,22 +252,7 @@
   .header__link:first-child {
     margin: 0 auto;
   }
-  .header__link_type_menu {
-    background-color: #fff;
-    position: relative;
-    z-index: 3;
-  }
-  .header__link_type_menu::after {
-    content: '';
-    display: inline-block;
-    width: 12px;
-    height: 10px;
-    background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/arrow.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin-left: 8px;
-    transition: all 0.4s linear;
-  }
+
   .header__buttons-container {
     justify-content: center;
     flex-direction: column;
