feat: add select filter

--- a/pages/telegram.css
+++ b/pages/telegram.css
@@ -42,7 +42,7 @@
 
 @import url('../blocks/social/social.css');
 
-@import url('../blocks/social-intro/social-intro.css');
+@import url('../blocks/social-intro/social-intro.v8.css');
 
 @import url('../blocks/service-list/service-list.css');
 
