--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -22,11 +22,11 @@
   border: 1px solid var(--color-primary);
   border-radius: 20px;
   display: grid;
+  max-width: 60%;
 }
 .popup__header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   gap: 24px;
   padding: 20px 30px;
   border-bottom: 1px solid var(--color-primary);
@@ -58,6 +58,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  margin-left: auto;
 }
 .popup__body {
   display: grid;
@@ -85,17 +86,17 @@
   font-size: 14px;
   line-height: 120%;
   color: var(--color-dark);
-  max-width: 320px;
 }
 .popup__description {
   grid-area: description;
 }
-.popup__description-list {
+.popup__description-list,
+.popup__info-list {
   padding: 0;
   margin: 0;
   list-style: none;
   display: grid;
-  gap: 10px;
+  gap: 7px;
 }
 .popup__description-item {
 }
@@ -108,6 +109,11 @@
 .popup__button {
   margin-bottom: 40px;
   justify-self: center;
+}
+@media screen and (max-width: 1280px) {
+  .popup__container {
+    max-width: 80%;
+  }
 }
 
 @media screen and (max-width: 700px) {
