feat: add select filter

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -122,7 +122,7 @@
   }
   .popup__container {
     max-width: 90%;
-    margin: 40px 0;
+    margin: 80px 0 40px;
   }
   .popup__body {
     display: grid;
