--- a/blocks/service-list/service-list.css
+++ b/blocks/service-list/service-list.css
@@ -198,7 +198,7 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
     gap: 12px;
   }
   .service-list__body-container {
