--- a/blocks/service-list/service-list.css
+++ b/blocks/service-list/service-list.css
@@ -15,6 +15,12 @@
   margin: 0 0 28px;
   grid-area: title;
 }
+.service-list__error-message {
+  padding: 20px 10px;
+  text-align: center;
+  margin: 0;
+  font-size: 12px;
+}
 .service-list__description {
   margin: 0 0 20px;
   position: relative;
